refactor: changed focus-visible prop from * to only interactive elements, removed aside tabIndex

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,6 +120,12 @@
 @layer base {
   * {
     @apply border-border outline-ring/50;
+  }
+  button,
+  a,
+  input,
+  textarea,
+  select {
     @apply focus-visible:border-ring focus-visible:ring-ring/50 !outline-none focus-visible:ring-[3px];
   }
   body {
