--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -125,7 +125,8 @@
   a,
   input,
   textarea,
-  select {
+  select,
+  li {
     @apply focus-visible:border-ring focus-visible:ring-ring/50 !outline-none focus-visible:ring-[3px];
   }
   body {
@@ -134,4 +135,8 @@
   html {
     scroll-behavior: smooth;
   }
+}
+
+.focus-outline {
+  @apply focus-visible:border-ring focus-visible:ring-ring/50 !outline-none focus-visible:ring-[3px];
 }
