--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,6 +40,7 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+  --color-description: var(--color-neutral-400);
 }
 
 @utility flex-* {
