feat: implemented cart components (CartItem, CartSheet, EmptyCart);

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,6 +41,7 @@
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
   --color-description: var(--color-neutral-400);
+  --color-background-second: #f6f7f8;
 }
 
 @utility flex-* {
